# optimizer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: build.yml
Formula/: ruvector-memopt.rb
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/ruvector/memopt/: NativeLib.kt
docs/adr/: ADR-001-ai-mode.md  ADR-002-resource-bridge.md  ADR-003-behavioral-fingerprint.md  ADR-004-malware-radar.md  ADR-005-flow-state-detector.md  ADR-006-frame-drop-oracle.md  ADR-007-hive-mind-swarm.md  ADR-008-llm-inference-optimizer.md  ADR-009-memory-music.md  ADR-010-data-export-training.md  ADR-011-macos-port.md  ADR-012-control-center-ui.md  ADR-013-workspace-profiles.md  ADR-014-system-health-score.md  ADR-015-startup-optimizer.md  ADR-016-wsl2-memory-governor.md  ADR-017-build-environment-optimizer.md  ADR-018-spectral-leak-detector.md  ADR-019-predictive-prefetcher.md  ADR-020-thermal-aware-scheduler.md  ADR-021-wasm-plugin-marketplace.md  ADR-022-gpu-memory-optimizer.md  ADR-023-bloatware-telemetry-silencer.md  ADR-024-time-travel-system-state.md  ADR-025-agentic-desktop-automation.md  ADR-026-cross-platform-backend-architecture.md  README.md
installer/: build-portable.bat  installer.wxs  license.rtf  setup.iss
resources/: app.manifest  tray.manifest  tray.rc
scripts/: deploy-to-mac.ps1  test-mac.sh  test-notify.ps1
scripts/gcp-devbox/: devbox.ps1  devbox.sh  repos.json  setup-vm.sh
scripts/gcp-devbox/docs/: QUICKSTART.md  README.md
src/: launcher.rs  lib.rs  macos_main.rs  main.rs  platform.rs  tray_main.rs
src/accel/: cpu.rs  mod.rs  simd.rs
src/ai/: bridge.rs  detector.rs  gpu.rs  mod.rs  modes.rs  ollama.rs  workload.rs
src/algorithms/: mincut.rs  mod.rs  pagerank.rs  sketch.rs  spectral.rs
src/apps/: browser.rs  docker.rs  electron.rs  leaks.rs  mod.rs  suggestions.rs
src/bench/: advanced.rs  metrics.rs  mod.rs  runner.rs
src/browser/: mod.rs
src/core/: config.rs  mod.rs  optimizer.rs  patterns.rs  process_scorer.rs
src/dashboard/: data.rs  mod.rs  server.rs
src/features/: agent.rs  bloatware.rs  build.rs  gpu.rs  health.rs  leaks.rs  mod.rs  plugins.rs  prefetch.rs  profiles.rs  startup.rs  thermal.rs  timeline.rs  wsl2.rs
src/macos/: memory.rs  mod.rs  process.rs  safety.rs  system.rs  tray.rs
src/monitor/: dashboard.rs  mod.rs  realtime.rs
src/neural/: attention.rs  engine.rs  ewc_learner.rs  hnsw_patterns.rs  mod.rs
src/platform/: mod.rs  traits.rs  windows.rs
src/platform/android/: jni.rs  memory.rs  mod.rs  process.rs
src/platform/linux/: daemon.rs  gpu.rs  memory.rs  mod.rs  modes.rs  process.rs
src/security/: integrity.rs  mod.rs  privileges.rs  validator.rs
src/service/: main.rs
src/tray/: control_center.rs  dialog.rs  mod.rs  settings.rs
src/web/: index.html
src/web/components/: agent.js  bloatware.js  build.js  gpu.js  health.js  leaks.js  plugins.js  prefetch.js  profiles.js  startup.js  thermal.js  timeline.js  wsl2.js
src/windows/: memory.rs  mod.rs  performance.rs  process.rs  safety.rs  system.rs
